<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Categories">
            <menu>
                <item
                    android:id="@+id/programming"
                    android:title="@string/programming"/>

                <item
                    android:id="@+id/datascience"
                    android:title="@string/data"
                    />
                <item
                    android:id="@+id/cybersecurity"
                    android:title="@string/cyber"
                    />

            </menu>
        </item>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/shutdown"
            android:title="@string/menu_logout"

            />

    </group>

</menu>
